--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [flake8]
 max-line-length = 120
+
+[mypy]
+# since we're ignoring imports, writing .mypy_cache doesn't make any sense
+cache_dir=/dev/null
+
+[mypy-*.migrations.*]
+ignore_errors = True
