chore: add drf-spectacular

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.2"
 djangorestframework = "^3.14.0"
+drf-spectacular = "^0.26.3"
 
 
 [build-system]
